猫管理に validation を追加

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,3 +12,12 @@ body {
   padding-top: 16px;
   padding-bottom: 16px;
 }
+
+.example-enter {
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 2.0s ease-in;
+}
